[MCOMPILER-269] Support modulepath (Java9/Jigsaw) remove --add-modules, already implicitly added by --add-reads
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-compiler-plugin@1763205 13f79535-47bb-0310-9956-ffa450edef68